Closed
Bug 1031877
Opened 8 years ago
Closed 8 years ago
OdinMonkey: move some debug assertions on code positions until after they are converted to their actual position.
Categories
(Core :: JavaScript Engine: JIT, defect)
Core
JavaScript Engine: JIT
Tracking
()
RESOLVED
FIXED
mozilla33
People
(Reporter: dougc, Assigned: dougc)
References
Details
Attachments
(1 file, 1 obsolete file)
Could some recently added assertions on code positions be moved until after they have been translated to their actual position? This is necessary with some wip, for an elastic asm buffer. It could be deferred.
Assignee | ||
Comment 1•8 years ago
|
||
https://tbpl.mozilla.org/?tree=Try&rev=99b3680cd967 Note created a new bug number, but it's the same patch.
Attachment #8447717 -
Flags: review?(luke)
![]() |
||
Updated•8 years ago
|
Attachment #8447717 -
Flags: review?(luke) → review+
Assignee | ||
Comment 2•8 years ago
|
||
Rebase.
Attachment #8447717 -
Attachment is obsolete: true
Attachment #8451227 -
Flags: review+
Assignee | ||
Comment 3•8 years ago
|
||
(In reply to Douglas Crosher [:dougc] from comment #2) > Created attachment 8451227 [details] [diff] [review] > Move some debug assertions on code positions until after they are converted > to their actual position. > > Rebase. Carried forward the r+.
Assignee | ||
Comment 4•8 years ago
|
||
https://tbpl.mozilla.org/?tree=Try&rev=f2d5fdb1e86e
Keywords: checkin-needed
Comment 5•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/37cfa5ad2064
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/37cfa5ad2064
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in
before you can comment on or make changes to this bug.
Description
•