Bug 1031877 - OdinMonkey: move some debug assertions on code positions until after they are converted to their actual position. r=luke